crates/prek/src/config/snapshots/prek__config__tests__numeric_rev_is_parsed_as_string.snap
---
source: crates/prek/src/config/mod.rs
expression: config
---
Config {
    update: None,
    priorities: {},
    repos: [
        Remote(
            RemoteRepo {
                repo: "https://github.com/pre-commit/mirrors-mypy",
                rev: "1.0",
                hooks: [
                    RemoteHook {
                        id: "mypy",
                        name: None,
                        entry: None,
                        language: None,
                        priority: None,
                        groups: None,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            include_deleted: None,
                            types: None,
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            env: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: None,
                            description: None,
                            language_version: None,
                            log_file: None,
                            shell: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {},
            },
        ),
    ],
    default_install_hook_types: None,
    default_language_version: None,
    default_stages: None,
    default_env: None,
    files: None,
    exclude: None,
    fail_fast: None,
    minimum_prek_version: None,
    orphan: None,
    _unused_keys: {},
}
