crates/prek/src/config/snapshots/prek__config__tests__parse_repos.snap
---
source: crates/prek/src/config/mod.rs
expression: result
---
Config {
    update: None,
    priorities: {},
    repos: [
        Local(
            LocalRepo {
                repo: "local",
                hooks: [
                    LocalHook {
                        id: "cargo-fmt",
                        name: "cargo fmt",
                        entry: "cargo fmt --",
                        language: System,
                        priority: None,
                        groups: None,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            include_deleted: None,
                            types: None,
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            env: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: None,
                            description: None,
                            language_version: None,
                            log_file: None,
                            shell: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {},
            },
        ),
    ],
    default_install_hook_types: None,
    default_language_version: None,
    default_stages: None,
    default_env: None,
    files: None,
    exclude: None,
    fail_fast: None,
    hide_status: None,
    minimum_prek_version: None,
    orphan: None,
    _unused_keys: {},
}
